src/tests/propInInitialState/invalid/case#9/index.jsx
import React, { useState } from 'react';

const MeuComponente = (props) => {
    const [estado, setEstado] = useState(condicao ? props : outroValor);

    // Restante do código...
};